@startuml domain-model

!define ENTITY class

package "Case Folder Bounded Context" as CF {

    ENTITY CaseFolder {
        - String id
        - CaseFolderStatus status
        - UserInfo userInfo
        - String owner
        - LocalDateTime createdAt
        - LocalDateTime updatedAt
    }

    ENTITY UserInfo {
        - String id
        - String name
        - String firstSurname
        - Optional<String> lastSurname
        - IdCard idCard
    }

    ENTITY IdCard {
        - String number
        - String type
    }

    ENTITY IdCardType {
        NIF
        NIE
        PASSPORT
    }

    ENUM CaseFolderStatus {
        PARTIALLY_CREATED
        ACTIVE
        CLOSED
        DELETED
    }

}

package "Case Step Bounded Context" as CS {

    ENTITY CaseStep {
        - String id
        - String caseFolderId
        - StepType stepType
        - StepStatus status
        - String assignedTo
        - String owner
        - LocalDateTime createdAt
        - LocalDateTime updatedAt
    }

    ENUM StepType {
        INITIAL_REVIEW
        DETAILED_ANALYSIS
        FINAL_DECISION
    }

    ENUM StepStatus {
        IN_PROGRESS
        COMPLETED
        CANCELLED
        ERROR
    }

}

CF.CaseFolder "1" *-- "0..*" CS.CaseStep : contains

CF.CaseFolder --> CF.CaseFolderStatus : status
CF.CaseFolder --> CF.UserInfo : userInfo

CF.UserInfo --> CF.IdCard : idCard
CF.IdCard --> CF.IdCardType : type

CS.CaseStep --> CS.StepType : stepType
CS.CaseStep --> CS.StepStatus : status

note top of CF.CaseFolder
    **CaseFolder**
    --
    Representa un expediente en el sistema asociado a una persona física.
    Un expediente tiene un estado y puede contener múltiples trámites.
end note

note top of CS.CaseStep
    **CaseStep**
    --
    Representa un trámite o paso dentro de un expediente.
end note

@enduml